--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
   <title>Saga</title>
 </head>
 <body>
@@ -33,38 +35,44 @@
       <section class="sessao-artigo">
         <h3>Teste2</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <h4 class="titulo-tabela">Saga - Origem do Quadrinho</h4>
-        <table class="tabela">
-          <tr>
-            <th class="th">País de origem	</th>
-            <th class="th">Língua de origem	</th>
-            <th class="th">Editora(s)	</th>
-            <th class="th">Formato de publicação</th>
-            <th class="th">Primeira edição</th>
-            <th class="th">Gênero</th>
-            <th class="th">Argumento</th>
-            <th class="th">Desenho</th>
-            <th class="th">Personagens principais</th>
-          </tr>
-          <tr>
-            <td class="td">Estados unidos</td>
-            <td class="td">inglês</td>
-            <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
-            <td class="td">Série mensal</td>
-            <td class="td">14 de março de 2012</td>
-            <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
-            <td class="td">Brian K. Vaughan</td>
-            <td class="td">Fiona Staples</td>
-            <td class="td">Alana e Marko</td>
-          </tr>
-        </table>
+        <h5 class="titulo-tabela">Saga - Origem do Quadrinho</h5>
+        <div class="table-responsive">
+          <table class="tabela">
+            <tr class="tr">
+              <th class="th">País de origem	</th>
+              <th class="th">Língua de origem	</th>
+              <th class="th">Editora(s)	</th>
+              <th class="th">Formato de publicação</th>
+              <th class="th">Primeira edição</th>
+              <th class="th">Gênero</th>
+              <th class="th">Argumento</th>
+              <th class="th">Desenho</th>
+              <th class="th">Personagens principais</th>
+            </tr>
+            <tr class="tr">
+              <td class="td">Estados unidos</td>
+              <td class="td">inglês</td>
+              <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
+              <td class="td">Série mensal</td>
+              <td class="td">14 de março de 2012</td>
+              <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
+              <td class="td">Brian K. Vaughan</td>
+              <td class="td">Fiona Staples</td>
+              <td class="td">Alana e Marko</td>
+            </tr>
+          </table>
+        </div>
       </section>
-      <!--<section class="sessao-artigo">
+
+      <!---------------------------------------------------------->
+      <section class="sessao-artigo">
         <h3 class="artigos">Teste3</h3>
-        <p class="artigos-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
         molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <iframe class="video" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </section>-->
+        <div class="container-video">
+          <iframe class="responsive-iframe" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
     </article>
 
     <!-- <div>
