--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <title>Saga</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
     <!--------------------------------->
     <article class="article-inicial">
       <section class="sessao-artigo">
-        <h3>Teste1</h3>
+        <h2>Teste1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
         <img class="img-criadores" src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
       </section>
@@ -33,9 +33,9 @@
       <!--------------------------------->
 
       <section class="sessao-artigo">
-        <h3>Teste2</h3>
+        <h2>Teste2</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <h5 class="titulo-tabela">Saga - Origem do Quadrinho</h5>
+        <h2 class="titulo-tabela">Saga - Origem do Quadrinho</h2>
         <div class="table-responsive">
           <table class="tabela">
             <tr class="tr">
@@ -66,7 +66,7 @@
 
       <!---------------------------------------------------------->
       <section class="sessao-artigo">
-        <h3 class="artigos">Teste3</h3>
+        <h2 class="artigos">Teste3</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
         molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
         <div class="container-video">
@@ -74,70 +74,33 @@
         </div>
       </section>
     </article>
+    <section class="imagens-cards">
+      <h2 class="titulo-quadrinhos">Quadrinhos Lançados no Brasil</h2>
+      <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
+      <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
+    </section>
 
-    <!-- <div>
-      <section class="quadrinhos">
-        <h2>Quadrinhos Lançados no Brasil</h2>
-        <section class="imagens-cards">
-          <figure class="lado-esquerdo-1">
-            <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
-          </figure>
-          <figure class="lado-direito-1">
-            <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
-          </figure>
-        </section>
+    <aside class="campo-aside">
+      <h2 class="titulo-tabela">Leia o volume Um em inglês aqui!</h2>
+      <nav class="navegacao">
+        <ol class="link-aside w3-ul w3-hoverable w3-center">
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
+          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
+        </ol>
+      </nav>
+    </aside>
 
-        <section class="imagens-cards">
-          <figure class="lado-esquerdo-2">
-            <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
-          </figure>
-          <figure class="lado-direito-2">
-            <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
-          </figure>
-        </section>
-
-        <section class="imagens-cards">
-          <figure class="lado-esquerdo-3">
-            <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
-          </figure>
-          <figure class="lado-direito-3">
-            <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
-          </figure>
-        </section>
-
-        <section class="imagens-cards">
-          <figure class="lado-esquerdo-4">
-            <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
-          </figure>
-          <figure class="lado-direito-4">
-            <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
-          </figure>
-        </section>
-
-        <section class="imagens-cards">
-          <figure class="meio-pagina">
-            <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
-          </figure>
-        </section>
-      </section>
-
-      <aside class="campo-aside">
-        <section class="titulo-aside-ingles">
-          <h3>Leia o volume Um em inglês aqui!</h3>
-          <nav class="navegacao">
-            <ol class="link-aside">
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
-              <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
-            </ol>
-          </nav>
-        </section>
-      </aside>
-
-    </div>
     <section>
       <p class="achecker">
         <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
@@ -147,7 +110,7 @@
       <footer class="rodape">
         <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
       </footer>
-  </section>-->
+  </section>
 </div>
 </body>
 </html>
