--- a/index.html
+++ b/index.html
@@ -22,20 +22,18 @@
         <li class="tag-li"><a href="#">teste4</a></li>
       </ul>
     </nav>
-    <!--------------------------------->
+
     <article class="article-inicial">
       <section class="sessao-artigo">
-        <h2>Teste1</h2>
+        <h2 class="artigos">Teste1</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
         <img class="img-criadores" src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
       </section>
 
-      <!--------------------------------->
-
       <section class="sessao-artigo">
-        <h2>Teste2</h2>
+        <h2 class="artigos">Teste2</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <h2 class="titulo-tabela">Saga - Origem do Quadrinho</h2>
+        <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
         <div class="table-responsive">
           <table class="tabela">
             <tr class="tr">
@@ -64,7 +62,6 @@
         </div>
       </section>
 
-      <!---------------------------------------------------------->
       <section class="sessao-artigo">
         <h2 class="artigos">Teste3</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
@@ -73,20 +70,19 @@
           <iframe class="responsive-iframe" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
+      <section class="imagens-cards">
+        <h2 class="titulo-quadrinhos">Quadrinhos Lançados no Brasil</h2>
+        <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
+        <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
+      </section>
     </article>
-    <section class="imagens-cards">
-      <h2 class="titulo-quadrinhos">Quadrinhos Lançados no Brasil</h2>
-      <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
-      <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
-    </section>
-
     <aside class="campo-aside">
       <h2 class="titulo-tabela">Leia o volume Um em inglês aqui!</h2>
       <nav class="navegacao">
@@ -110,7 +106,7 @@
       <footer class="rodape">
         <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
       </footer>
-  </section>
-</div>
+    </section>
+  </div>
 </body>
 </html>
