--- a/index.html
+++ b/index.html
@@ -1,112 +1,94 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <title>Saga</title>
-</head>
-<body>
-  <div class="centro">
-    <section class="cabecalho">
-      <h1>Saga</h1>
-    </section>
-    <nav class="navegacao">
-      <ul class="teste">
-        <li class="tag-li"><a href="#">teste1</a></li>
-        <li class="tag-li"><a href="#">teste2</a></li>
-        <li class="tag-li"><a href="#">teste3</a></li>
-        <li class="tag-li"><a href="#">teste4</a></li>
-      </ul>
-    </nav>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<title>Saga</title>
+	</head>
+	<body id="body">
+		<div id="container">
+			<header id="cabecalho">
+				<h1>Saga</h1>
+			</header>
+			<nav class="navegacao">
+				<ul class="teste">
+					<li class="tag-li"><a href="#">Sobre os criadores</a></li>
+					<li class="tag-li"><a href="#">Sobre a obra</a></li>
+					<li class="tag-li"><a href="#">Quadrinhos Lançados no Brasil</a></li>
+					<li class="tag-li"><a href="#">Leia o volume Um aqui (Em inglês)!</a></li>
+				</ul>
+			</nav>
+			<div class="cor-fundo">
+				<div class="row">
+					<article class="lado-esquerdo middle">
+						<h2 class="artigos">Sobre os criadores</h2>
+						<p class="paragrafo">Desde 1997, <strong>Brian K. Vaughan</strong> já vinha realizando alguns trabalhos pela Marvel e pela DC Comics. Suas brevíssimas passagens por títulos como Batman, X-Men, Homem-Aranha, Mulher-Maravilha, Liga da Justiça, Lanterna Verde e até pelo cult Monstro do Pântano lhe deram experiência e abriram caminho para futuros trabalhos. Durante seu período pela Marvel, escreveu a minissérie Dr. Strange: The Oath (Dr. Estranho: O Juramento) em que reconta a origem do personagem. Em 2006, escreveu a graphic novel Pride of Bahgdad (Os Leões de Bagdá) pelo selo Vertigo, na qual aborda a Guerra do Iraque do ponto de vista de leões fugidos do zoológico da cidade após um bombardeio. <strong>Fiona Staples</strong> é uma artista canadense, conhecida por seu trabalho como desenhistas de revistas em quadrinhos americanas como Saga, que tem ilustrado desde 2012, e Archie, que ilustrou brevemente em 2015. Staples tem sido citada como uma das melhores artistas em atividade na indústria americana e ganhou vários vezes tanto o Eisner quanto o Harvey Awards.</p>
+						<img class="img-criadores" src="img/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
 
-    <article class="article-inicial">
-      <section class="sessao-artigo">
-        <h2 class="artigos">Teste1</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <img class="img-criadores" src="imagens/1024px-10.12.12BrianKVaughanFionaStaplesByLuigiNovi1.jpg" alt="foto do autor ao lado da desenhista de Saga" width="80%">
-      </section>
+						<h2 class="artigos">Sobre a obra</h2>
+						<p class="paragrafo">O primeiro arco de história (que reúne as edições 1 à 6) foca no relacionamento entre os personagens Alana e Marko, dois amantes de diferentes planetas cujos povos estão em guerra um com o outro. Alana vem da Alinça Landfall, tecnologicamente avançada, o maior planeta na galáxia, e Marko é da única lua do planeta Lanfall, Wreath, cujo povo usa magia ao invés de armas tecnológicas. Embora a paz fosse restabelecida nos dois mundos de origem, o conflito se espalhou em todos os outros planetas conhecidos, cujas espécies nativas foram forçados a escolher um dos lado. Como Landfall e Wreath estavam em lados opostos, Alana e Marko se conheceram quando ela foi designada para protegê-lo em uma prisão em Cleave, planeta onde ele se tornou um prisioneiro de guerra. Eles fugiram juntos depois de se conhecerem. No início da primeira edição da série, Alana dá à luz a sua filha, Hazel, que, ocasionalmente, narra a série (em primeira pessoa). Logo depois, o trio está preso entre uma equipa de cada um de seus mundos, que acabam matando um ao outro a tentar capturá-los, um massacre que é atribuído ao casal. Em Landfall, o Príncipe Robô IV é atribuído por seu pai para capturá-los, e entra em conflito com o seu homólogo em Wreath, um mercenário chamado The Will. O fantasma de uma menina morta chamada Izabel acaba se tornando uma espécie de babá para a recém nacida Hazel. Os quatro tiveram que escapar do planeta Cleave antes de serem confrontados pelos pais de Marko.</p>
+						<p class="titulo-tabela">Origem do Quadrinho</p>
+						<div class="table-responsive">
+							<table class="tabela">
+								<tr class="tr">
+									<th class="th">País de origem	</th>
+									<th class="th">Língua de origem	</th>
+									<th class="th">Editora(s)	</th>
+									<th class="th">Formato de publicação</th>
+									<th class="th">Primeira edição</th>
+									<th class="th">Gênero</th>
+									<th class="th">Argumento</th>
+									<th class="th">Desenho</th>
+									<th class="th">Personagens principais</th>
+								</tr>
+								<tr class="tr">
+									<td class="td">Estados unidos</td>
+									<td class="td">inglês</td>
+									<td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
+									<td class="td">Série mensal</td>
+									<td class="td">14 de março de 2012</td>
+									<td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
+									<td class="td">Brian K. Vaughan</td>
+									<td class="td">Fiona Staples</td>
+									<td class="td">Alana e Marko</td>
+								</tr>
+							</table>
+						</div>
 
-      <section class="sessao-artigo">
-        <h2 class="artigos">Teste2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <p class="titulo-tabela">Saga - Origem do Quadrinho</p>
-        <div class="table-responsive">
-          <table class="tabela">
-            <tr class="tr">
-              <th class="th">País de origem	</th>
-              <th class="th">Língua de origem	</th>
-              <th class="th">Editora(s)	</th>
-              <th class="th">Formato de publicação</th>
-              <th class="th">Primeira edição</th>
-              <th class="th">Gênero</th>
-              <th class="th">Argumento</th>
-              <th class="th">Desenho</th>
-              <th class="th">Personagens principais</th>
-            </tr>
-            <tr class="tr">
-              <td class="td">Estados unidos</td>
-              <td class="td">inglês</td>
-              <td class="td"><a href="https://pt.wikipedia.org/wiki/Image_Comics">Image Comics</a></td>
-              <td class="td">Série mensal</td>
-              <td class="td">14 de março de 2012</td>
-              <td class="td"><a href="https://pt.wikipedia.org/wiki/Space_opera">Space opera</a></td>
-              <td class="td">Brian K. Vaughan</td>
-              <td class="td">Fiona Staples</td>
-              <td class="td">Alana e Marko</td>
-            </tr>
-          </table>
-        </div>
-      </section>
-
-      <section class="sessao-artigo">
-        <h2 class="artigos">Teste3</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla, molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lectus nulla,
-        molestie id lacus fringilla, fermentum hendrerit mauris. Aenean rhoncus vulputate quam, id tristique nisi vulputate vel. </p>
-        <div class="container-video">
-          <iframe class="responsive-iframe" src="https://www.youtube.com/embed/7nnmQoYxESE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-      </section>
-      <section class="imagens-cards">
-        <h2 class="titulo-quadrinhos">Quadrinhos Lançados no Brasil</h2>
-        <a href="#"><img src="imagens/saga1.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga2.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga3.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga4.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga5.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga6.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga7.jpg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga8.jpeg" alt="avatar" width="100%"></a>
-        <a href="#"><img src="imagens/saga9.jpg" alt="avatar" width="100%"></a>
-      </section>
-    </article>
-    <aside class="campo-aside">
-      <h2 class="titulo-tabela">Leia o volume Um em inglês aqui!</h2>
-      <nav class="navegacao">
-        <ol class="link-aside w3-ul w3-hoverable w3-center">
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA">Saga issue #1</a></li>
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA">Saga issue #2</a></li>
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA">Saga issue #3</a></li>
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA">Saga issue #4</a></li>
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA">Saga issue #5</a></li>
-          <li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA">Saga issue #6</a></li>
-        </ol>
-      </nav>
-    </aside>
-
-    <section>
-      <p class="achecker">
-        <a href="https://achecker.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
-          <img src = "https://achecker.ca/images/icon_W2_aa.jpg" alt = "WCAG 2.0 (nível AA)" height = "32" width = "102" />
-        </a>
-      </p>
-      <footer class="rodape">
-        <p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
-      </footer>
-    </section>
-  </div>
-</body>
+						<section class="imagens-cards">
+							<h2 class="titulo-quadrinhos">Quadrinhos Lançados no Brasil</h2>
+							<a href="#"><img src="img/saga1.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga2.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga3.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga4.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga5.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga6.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga7.jpg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga8.jpeg" alt="avatar" width="100%"></a>
+							<a href="#"><img src="img/saga9.jpg" alt="avatar" width="100%"></a>
+						</section>
+					</article>
+					<aside class="lado-direito side">
+						<p class="titulo-tabela">Leia o volume Um aqui (Em inglês)!</p>
+						<ol class="link-aside w3-ul w3-hoverable w3-center">
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-1?id=1301" class="tagA" target="_blank">Saga issue #1</a></li>
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-2?id=1325" class="tagA" target="_blank">Saga issue #2</a></li>
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-3?id=1344" class="tagA" target="_blank">Saga issue #3</a></li>
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-4?id=1346&__cf_chl_jschl_tk__=9887cefd7c5fa65ae4ac037e3fac7e62213dbd6c-1588982532-0-AT5HiEH7dPh1Rd1jiRE8tEyTV1_SoAYmINdk1SOMGEsj_EXtC0pVxiMRSm-yNphqGjm7L4QaKwjq_ItPjw9AONnGA7Zy_CcV27JQKBGlup__LyRClsxRnz3Y2zUWLu93agtQ0NyHodlZRQ603nzaV2Rr_fgTXqMOSt1H8gbRjTmSelh7QHysKPHS_Se27lJeD2u5ZR3NvCZE2WAvqvsjMTgu4MztSO9hkTfop6ufCvX8yOw-UNwfYCMYwPWmdeut-dka1neg2fNtwLyz8nlWvwajKw73MiGZE8m6z4YyP337KcaBsgtAcWTIaTVQ8EbTlg" class="tagA" target="_blank">Saga issue #4</a></li>
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-5?id=1347" class="tagA" target="_blank">Saga issue #5</a></li>
+							<li class="tag-li-2"><a href="https://readcomiconline.to/Comic/Saga/Issue-6?id=1348" class="tagA" target="_blank">Saga issue #6</a></li>
+						</ol>
+					</aside>
+				</div>
+			</div>
+		</div>
+		<footer id="rodape">
+			<p>Conteúdo compilado por: Marylange Leal com inspiração no quadrinho Saga</p>
+		</footer>
+		<script type="text/javascript" src="script.js"></script>
+	</body>
 </html>
